--- a/examples/apple.html
+++ b/examples/apple.html
@@ -70,9 +70,8 @@
 	#menu li {
         display:inline-block;
         margin: 10px;
-        float: left;
+        float: center;
         color: #fff;
-        background:#000;
     }
     #menu li.active{
         color: #fff;
@@ -91,7 +90,7 @@
     }
     #menu{
         top:0;
-        left:0;
+        left:1200px;
         height: 10px;
         z-index:100;
         width: 100%;
@@ -110,11 +109,11 @@
 		height: 30px;
 		display:block;
 		width: 100%;
-		background: #FFF;
+		background: #000;
 		z-index:9;
 		text-align:left;
-        text-indent: 70px;
-		color: #FC30A7;
+        text-indent: 75px;
+		color: #FFFFFF;
 /*        #36CEA4*/
 		padding: 10px 0 0 0;
 	}
@@ -540,10 +539,10 @@
 -->
 
 <ul id="menu">
-	<li data-menuanchor="secondPage"><a href="#secondPage">Home</a></li>
-	<li data-menuanchor="5thpage"><a href="#5thpage">About</a></li>
-	<li data-menuanchor="5thpage"><a href="#5thpage">Sign Up</a></li>
-	<li data-menuanchor="5thpage"><a href="#5thpage">Contact</a></li>
+	<li data-menuanchor="firstPage"><a href="#firstPage">Home</a></li>
+	<li data-menuanchor="secondPage"><a href="#secondPage">About</a></li>
+	<li data-menuanchor="3rdPage"><a href="#3rdPage">Sign Up</a></li>
+	<li data-menuanchor="4thpage"><a href="#4thpage">Contact</a></li>
 </ul>
 
 <div id="header">
