image modification header

--- a/examples/apple.html
+++ b/examples/apple.html
@@ -90,7 +90,7 @@
     }
     #menu{
         top:10px;
-        left:1200px;
+        left:60%;
         height: 10px;
         z-index:100;
         width: 100%;
@@ -112,7 +112,7 @@
         height: 30px;
         padding-top:5px;
         width: 200px;
-        padding-left: 800px;
+        left: 40%;
 
     }
     #header{
