--- a/examples/apple.html
+++ b/examples/apple.html
@@ -153,7 +153,7 @@
 	* --------------------------------------- */
 	#section0{
 		padding: 0px 0;
-		background-image: url(imgs/toge3.png);
+		background-image: url(imgs/page1background.png);
         overflow: hidden;
         background-size: 100% 100%;
 	}
@@ -164,7 +164,7 @@
 		z-index: 4;
 		width: 100%;
 		left: 0;
-		top: 43%;
+		top: 70%;
 	}
 
 	/* Section 1
