--- a/examples/apple.html
+++ b/examples/apple.html
@@ -43,7 +43,7 @@
 
 
 			/* Common styles
-			* --------------------------------------- */			
+			* --------------------------------------- */
 			.section{
 				text-align:center;
 				overflow:hidden;
@@ -183,7 +183,7 @@
 				margin-left: 50px;
 				width: 350px;
 				z-index: 1;
-			}		
+			}
 
 			#section1 a{
 				z-index: 2;
@@ -289,7 +289,7 @@
 					width: 534px;
 					height: 464px;
 				}
-			}	
+			}
 			#bubble{
 				z-index: 11;
 				left: 140px;
@@ -310,7 +310,7 @@
 				left:0px;
 				top:0px;
 				height:100%;
-				width:100%;				
+				width:100%;
 			}
 			.modalMouseOver{
 				position:absolute;
@@ -493,13 +493,13 @@
 			}
 
 			#section3 .signupbox {
-				width:305px; 
+				width:305px;
 				margin:0;
 				text-align: center;
 				top: 25%;
 				left: 25%;
 				position: absolute;
-				width: 582px;  
+				width: 582px;
 
 			}
 
@@ -522,11 +522,13 @@
 				border:1px solid #444;
 				/*    border-right:none;*/
 			}
-			.inputWithButton > input[type=button]{
+			.inputWithButton > input[type=submit]{
 				border-left:1px solid gray;
 				background:#A30000;
 				border:1px solid #A30000;
 				color:#fff;
+				margin-top: 5px;
+				height: 30px;
 				cursor:pointer;
 				width:70px;
 				outline
@@ -562,13 +564,13 @@
 
 			/*
 			#section4 .signupbox {
-			width:305px; 
+			width:305px;
 			margin:0;
 			text-align: center;
 			top: 25%;
 			left: 25%;
 			position: absolute;
-			width: 582px;  
+			width: 582px;
 
 			}
 			*/
@@ -576,7 +578,7 @@
 			/* Nicely lines up the labels. */
 			#section4 .form label {display:inline-block; width:500px;}
 
-			/* You could add a class to all the input boxes instead, 
+			/* You could add a class to all the input boxes instead,
 			if you like. That would be safer, and more backwards-compatible */
 			#section4 .form input[type="email"],
 			#section4 .form input[type="password"],
@@ -585,7 +587,7 @@
 			form .line {clear:both;}
 			form .line.submit {text-align:right; width: 400px;}
 			input[type=submit] {padding:1px 1px; background:skyblue; border:0 none; cursor:pointer;
-				color: white; width: 54%; 
+				color: white; width: 54%;
 				-webkit-border-radius: 5px; border-radius: 5px; }
 
 
@@ -627,22 +629,22 @@ var console = { log: function() {} };
 					fitToView: true,
 					width: '90%',
 					height: '90%',
-					afterLoad: function(){						
+					afterLoad: function(){
 						var $background = $('.modalBackground');
 						var $mouseover = $('.modalMouseOver');
 						var $currentMouseover;
 						var factor = 1.25;
 						var mouseoverWidth, mouseoverHeight, coughLeft, mouseoverTop;
 						var backgroundWidth, backgroundHeight;
-						if ($mouseover.attr('id') == 'couch'){							
-							$mouseover.width(mouseoverWidth = $background.parent().width()*0.56);												
+						if ($mouseover.attr('id') == 'couch'){
+							$mouseover.width(mouseoverWidth = $background.parent().width()*0.56);
 							$mouseover.height(mouseoverHeight = $background.parent().height()*0.32);
 							$mouseover.css('left', mouseoverLeft = $background.parent().width()*0.1);
-							$mouseover.css('top',mouseoverTop = $background.parent().height()*0.525);							
+							$mouseover.css('top',mouseoverTop = $background.parent().height()*0.525);
 						}
 						else if ($mouseover.attr('id') == 'engine'){
 							$mouseover.css('opacity',1);
-							$mouseover.width(mouseoverWidth = $background.parent().width()*0.56);												
+							$mouseover.width(mouseoverWidth = $background.parent().width()*0.56);
 							$mouseover.height(mouseoverHeight = $background.parent().height()*0.32);
 							$mouseover.css('left', mouseoverLeft = $background.parent().width()*0.1);
 							$mouseover.css('top',mouseoverTop = $background.parent().height()*0.525);
@@ -670,17 +672,17 @@ var console = { log: function() {} };
 								top : mouseoverTop+"px"
 							}, function(){
 								$currentMouseover.stop().css('opacity','0');
-							});	
+							});
 						}
 
-						$('.modalMouseOver#couch').hover(							
+						$('.modalMouseOver#couch').hover(
 							function(){
-								$currentMouseover = $(this);							
+								$currentMouseover = $(this);
 								expandCouch();
 							},
 							function(){
 								$currentMouseover = $(this);
-								collapseCouch();							
+								collapseCouch();
 							});
 					}
 				});
@@ -702,7 +704,7 @@ var console = { log: function() {} };
 
 					'onLeave': function(index, nextIndex, direction){
 						if (index == 2){
-							$('.fancybox-close').click();	
+							$('.fancybox-close').click();
 						}
 						if (index == 1 && direction == 'down'){
 							$('#logo').animate({height:'40px', width:'30px', top:'5px', left:'30px'}, "fast");
@@ -712,7 +714,7 @@ var console = { log: function() {} };
 						else if (nextIndex == 1 && direction == 'up'){
 							$('#logo').animate({height:'200px', width:'150px', top:'40%', left:'50px'}, "fast");
 							$('#headerImage').animate({height:'150px',width:'1000px', top:'40%',left:'250px'}, "fast");
-							$('#header').animate({top:'-60px'});						
+							$('#header').animate({top:'-60px'});
 						}
 
 						if (index == 3 && direction == 'down'){
@@ -732,7 +734,7 @@ var console = { log: function() {} };
 						$('video').get(0).play();
 					},
 					anchors: ['firstPage', 'secondPage', '3rdPage', '4thPage', '5thPage' ],
-					menu: '#menu2, #menu1', 
+					menu: '#menu2, #menu1',
 					easingcss3: 'cubic-bezier(0.175, 0.885, 0.320, 1.275)'
 				});
 			});
@@ -756,7 +758,7 @@ var console = { log: function() {} };
 				<li data-menuanchor= "secondPage"><a href="#secondPage">About</a></li>
 				<li data-menuanchor= "3rdPage"><a href="#3rdPage">RND</a></li>
 				<li data-menuanchor= "4thPage"><a href="#4thPage">Sign Up</a></li>
-				<li data-menuanchor= "5thPage"><a href="#5thPage">Contact</a></li>	  	    
+				<li data-menuanchor= "5thPage"><a href="#5thPage">Contact</a></li>
 			</ul>
 			<!--	<a href="#firstPage"><img src="imgs/templogo.png" alt="logo" id = "logo"/></a>-->
 		</div>
@@ -801,7 +803,7 @@ var console = { log: function() {} };
 							<a href="#automotiveModal" class="fancybox">
 								<img src="imgs/automobile.jpg" alt="iphone"/>
 							</a>
-						</div>		
+						</div>
 
 						<div class="container medical">
 							<a href="#medicalModal" class="fancybox">
@@ -811,7 +813,7 @@ var console = { log: function() {} };
 						<div class="box">
 							<h2 style = "color: #FFFFFF; font-family: optima;">Every imgage has a story <br>to tell...</h2>
 						</div>
-					</div>			
+					</div>
 				</div>
 			</div>
 
@@ -844,14 +846,14 @@ Come explore our Fresh New World!
 							technology</h2>
 
 						<div class = signupbox>
-							<span class="inputWithButton" action="demo_form.asp" method="post">
+							<form class="inputWithButton" action="//formspree.io/fxlabsinc@gmail.com" method="POST">
 								<input type="text" placeholder="Your email"/>
-								<input type= "button" value = "Sign up"/>
-							</span>
+								<input type= "submit" value = "Sign up"/>
+							</form>
 						</div>
 					</div>
 				</div>
-				<!-- 
+				<!--
 <div class="imgsContainer">
 <img src="imgs/ins5.png" alt="iphone" id="iphone-two" />
 </div>
@@ -884,7 +886,7 @@ Come explore our Fresh New World!
 		<div style="display:none"><div id="fashionModal" class="modal">Fashion.</div></div>
 		<div style="display:none"><div id="automotiveModal" class="modal">Automotive.
 			<img class="modalBackground" src="imgs/temp/automobile.jpg"/>
-			<div class="modalOverlay"/>			
+			<div class="modalOverlay"/>
 			<img clas="modalMouseOver" id ="engine" src="imgs/temp/engine.jpg"/>
 			<img id="engineSpecs" src="imgs/temp/enginespecs.JPG"/>
 			</div></div>
